--- a/projetoHONDA.ipynb
+++ b/projetoHONDA.ipynb
@@ -5,7 +5,8 @@
     "colab": {
       "name": "projetoHONDA.ipynb",
       "provenance": [],
-      "authorship_tag": "ABX9TyOdZzoW6B+XInT1YSf5BDYO",
+      "collapsed_sections": [],
+      "authorship_tag": "ABX9TyMw9olgU1IXslt+Avsr8PtS",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -29,40 +30,11 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 2,
+      "execution_count": null,
       "metadata": {
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "id": "j9jy_DM2EgAa",
-        "outputId": "ec8c2dd6-9d49-4a77-e26e-1956b73fc30d"
+        "id": "7FaZ6nDon106"
       },
-      "outputs": [
-        {
-          "output_type": "stream",
-          "name": "stdout",
-          "text": [
-            "1 - para ADM:\n",
-            "2 - para CLIENTE:\n",
-            "2\n",
-            "Olá, aqui você pode adicionar uma nova conta!\n",
-            "Digite o nome de usuário: ROD\n",
-            "Cadastro realizado com sucesso!\n",
-            "\n",
-            "Efetue o seu login\n",
-            "Digite o seu nome de usuario: ROD\n",
-            "Bem vindo, ROD!\n",
-            "Honda CG 160: R$ 14,620.0\n",
-            "Honda Biz: R$ 10,170.0\n",
-            "Honda NXR 160 Bros: R$ 16,270.0\n",
-            "Honda Pop 110i: R$ 8,330.0\n",
-            "Honda CB 250F Twister: R$ 18,420.0\n",
-            "HONDA XRE 190: R$ 18,100.0\n",
-            "HONDA CBR 1000RR-R FIREBLADE: R$ 149,911.0\n",
-            "honda CG 160 Cargo: R$ 13,650.0\n"
-          ]
-        }
-      ],
+      "outputs": [],
       "source": [
         "from re import M\n",
         "import matplotlib.pyplot as plt\n",
@@ -75,20 +47,21 @@
         "produtos = {'Honda CG 160': 14620, 'Honda Biz': 10170, 'Honda NXR 160 Bros': 16270, 'Honda Pop 110i': 8330, 'Honda CB 250F Twister': 18420, 'HONDA XRE 190': 18100, 'HONDA CBR 1000RR-R FIREBLADE': 149911, 'honda CG 160 Cargo': 13650}\n",
         "produtos_vendas = {'Honda CG 160':11.861, 'Honda Biz':10.321, 'Honda NXR 160 Bros':11.322, 'Honda Pop 110i':8.342, 'Honda CB 250F Twister':9.214, 'HONDA XRE 190':9.317, 'HONDA CBR 1000RR-R FIREBLADE':6.326, 'honda CG 160 Cargo':8.474}\n",
         "\n",
-        "\n",
+        "# função principal onde é o nosso primeiro\n",
         "def menu(m:int):\n",
         "  if m == 1:\n",
         "    administrador()\n",
         "  elif m == 2:\n",
         "    cliente()\n",
         "\n",
-        "\n",
+        "# Função onde vai ser o menu interno de administrador\n",
         "def administrador():\n",
         "  op = int(input(\"Digite 1 - Para saber o relatório Anual das vendas \\nDigite 2 - Para cadastrar um novo produto\\n\"))\n",
         "  opc.get(op)()\n",
         "\n",
+        "\n",
+        "# Função onde vai ser o menu interno de cliente\n",
         "def cliente():\n",
-        "  \n",
         "  arq = open('registrados.txt', 'a')\n",
         "  print('Olá, aqui você pode adicionar uma nova conta!')\n",
         "  nome_usuario = input('Digite o nome de usuário: ')\n",
@@ -109,17 +82,18 @@
         "\n",
         "  registrados = arq.readlines()\n",
         "  if nome_login + '\\n' in registrados:\n",
-        "      print('Bem vindo, {}!'.format(nome_login))\n",
+        "      print('Bem vindo, {}!\\n'.format(nome_login))\n",
+        "      for k,v in produtos.items():\n",
+        "        print(f\"{k}: R$ {v:,.1f}\")\n",
         "  else:\n",
         "      print('Você deve ter digitado seu nome de usuario errado, por favor verifique.')\n",
         "  arq.close()\n",
-        "  for k,v in produtos.items():\n",
-        "        print(f\"{k}: R$ {v:,.1f}\")\n",
-        "\n",
+        "  \n",
+        "# dicionário responsável pelas opções do primeiro menu\n",
         "opc1 = {1:administrador,2:cliente}\n",
         "  \n",
+        "# Função responsável pelo relatório da moto mais vendida\n",
         "def OpcRela():\n",
-        "  \n",
         "  print(\"===============RELATÓRIO ANUAL DE VENDAS=================\")\n",
         "  print(f\"A moto mais vendida do ano foi: {max(produtos_vendas)} com um total de {vendas[0]} vendas!\")\n",
         "  plt.xlabel('meses')\n",
@@ -128,7 +102,8 @@
         "  plt.scatter(meses,vendas, color = 'black')\n",
         "  plt.show(meses,vendas)\n",
         "\n",
-        "def OpccadatroMoto():\n",
+        "# Função responsável por cadastro do produto (motos)\n",
+        "def OpcCadastroMoto():\n",
         "  loop = True \n",
         "  v = 'S'\n",
         "  while loop == True:\n",
@@ -140,8 +115,10 @@
         "      motos.append(motos)\n",
         "  print(\"Modelos Novos Adicionados (ano/modelo) =\", modelo_ano)\n",
         "\n",
-        "opc = {1:OpcRela, 2:OpccadatroMoto}\n",
+        "opc = {1:OpcRela, 2:OpcCadastroMoto}\n",
         "\n",
+        "\n",
+        "# Função responsável pelo login\n",
         "def login():\n",
         "  loop = True\n",
         "  while(loop):\n",
@@ -159,9 +136,21 @@
         "    else:\n",
         "      print(\"Infelizmente não achamos o seu cadastro, insira um ID válido!\")\n",
         "\n",
+        "# ---------------------------------------------------------\n",
         "m = int(input(\"1 - para ADM:\\n2 - para CLIENTE:\\n\"))    \n",
         "menu(m)"
       ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        ""
+      ],
+      "metadata": {
+        "id": "h2voEUlroTqY"
+      },
+      "execution_count": null,
+      "outputs": []
     }
   ]
 }
